--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-  </head>
-  <body>
-    <% if(kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
+</head>
+<body>
+    
+    <h1><%= kindOfDay %></h1>
 
-    <h1 style="color: purple;"><%= kindOfDay %> List</h1>
-    <% } else { %>
-    <h1 style="color: blue;"><%= kindOfDay %> List</h1>
-    <% } %>
-  </body>
+    <ul>
+        <% for(var i=0; i< newItems.length; i++ ) { %>
+            <li><%= newItems[i] %></li>
+        <% } %>
+
+    </ul>
+
+    <form action="/" class="" method="post">
+        <input type="text" name="newItem" id="newItem">
+        <button type="submit" name="button">Add</button>
+    </form>
+</body>
 </html>
