--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,21 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
-    <h1><%= kindOfDay %></h1>
+    <div class="box" id="heading">
+        <h1><%= kindOfDay %></h1>
+    </div>
 
-    <ul>
-        <% for(var i=0; i< newItems.length; i++ ) { %>
-            <li><%= newItems[i] %></li>
+    <div class="box">
+        <% for(let i=0; i< newItems.length ; i++ ) { %>
+        <div class="item">
+            <input type="checkbox" name="" id="">
+            <p><%= newItems[i] %></p>                
+        </div>
         <% } %>
 
-    </ul>
+        <form action="/" class="item" method="post">
+            <input type="text" name="newItem" id="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
+    </div>
 
-    <form action="/" class="" method="post">
-        <input type="text" name="newItem" id="newItem">
-        <button type="submit" name="button">Add</button>
-    </form>
 </body>
 </html>
